--- a/HMCL/src/main/resources/assets/lang/I18N_zh_CN.properties
+++ b/HMCL/src/main/resources/assets/lang/I18N_zh_CN.properties
@@ -19,7 +19,7 @@
 # Contributors: huangyuhui
 about=关于
 about.copyright=版权
-about.copyright.statement=版权所有 (c) 2021 huangyuhui 2022-2023 Calicy LLC 2020-2023 Coldshine 2022-2023 Moonlight Land.
+about.copyright.statement=版权所有 (c) 2021 huangyuhui 2022-2023 Calicy LLC 2020-2023 Coldshine 2019-2023 Gennokioku.
 about.author=作者
 about.author.statement=bilibili ID: @huanghongxun
 about.claim=用户协议
@@ -91,7 +91,7 @@ account.register=注册
 account.manage=帐户列表
 account.methods=登录方式
 account.methods.authlib_injector=外置登录 (authlib-injector)
-account.methods.moonlightland=Gennokioku 认证服务器
+account.methods.gennokioku=Gennokioku 认证服务器
 account.methods.microsoft=微软帐户
 account.methods.microsoft.birth=如何修改帐户出生日期
 account.methods.microsoft.close_page=已完成微软帐户授权，接下来启动器还需要完成剩余登录步骤。你已经可以关闭本页面了。
@@ -980,15 +980,13 @@ update=启动器更新
 update.accept=更新
 update.changelog=更新日志
 update.channel.dev=测试版
-update.channel.dev.hint=欢迎来到 Moonlight Land，本启动器已为 Moonlight Land 启动进行了定制和优化，不建议你使用其他启动器启动 Moonlight Land，\n\
-  你下载的 Moonlight Land 客户端中已包含 Windows 平台的 Java 18，可以直接启动游戏而不需要额外安装，其他平台需要自行下载 Java 18 并设置路径后启动。\n\
-  注意：从 Moonlight Land 启动器 1.0.3 开始，必须使用 Java 18 启动启动器，否则可能会发生无法登录认证服务器账号的错误。
-update.channel.dev.title=欢迎来到 Moonlight Land
+update.channel.dev.hint=欢迎来到 Gennokioku 原忆，本启动器已为 Gennokioku 启动进行了定制和优化，不建议你使用其他启动器启动 Gennokioku。\n\
+  你下载的 Gennokioku 客户端中已包含 Windows 平台的 Java 16，可以直接启动游戏而不需要额外安装，其他平台需要自行下载 Java 16 并设置路径后启动。
+update.channel.dev.title=欢迎来到 Gennokioku 原忆
 update.channel.nightly=预览版
-update.channel.nightly.hint=欢迎来到 Moonlight Land，本启动器已为 Moonlight Land 启动进行了定制和优化，不建议你使用其他启动器启动 Moonlight Land，\n\
-  你下载的 Moonlight Land 客户端中已包含 Windows 平台的 Java 18，可以直接启动游戏而不需要额外安装，其他平台需要自行下载 Java 18 并设置路径后启动。\n\
-  注意：从 Moonlight Land 启动器 1.0.3 开始，必须使用 Java 18 启动启动器，否则可能会发生无法登录认证服务器账号的错误。
-update.channel.nightly.title=欢迎来到 Moonlight Land
+update.channel.nightly.hint=欢迎来到 Gennokioku 原忆，本启动器已为 Gennokioku 启动进行了定制和优化，不建议你使用其他启动器启动 Gennokioku。\n\
+  你下载的 Gennokioku 客户端中已包含 Windows 平台的 Java 16，可以直接启动游戏而不需要额外安装，其他平台需要自行下载 Java 16 并设置路径后启动。
+update.channel.nightly.title=欢迎来到 Gennokioku 原忆
 update.channel.stable=推荐版本
 update.checking=正在检查更新
 update.failed=更新失败
@@ -1044,5 +1042,7 @@ wizard.failed=失败
 wizard.finish=完成
 wizard.next=下一步 >
 
-moonlightland.discord=Discord
-about.thanks_to.coldshine.statement=雪之下泠曦为 Moonlight Land 启动器进行定制优化
+gennokioku.discord=Discord
+gennokioku.terms=玩家条款
+gennokioku.changelog=新版变化
+about.thanks_to.coldshine.statement=雪之下泠曦为 Gennokioku 启动器进行定制优化
