--- a/HMCL/src/main/resources/assets/lang/I18N.properties
+++ b/HMCL/src/main/resources/assets/lang/I18N.properties
@@ -21,7 +21,7 @@
 
 about=About
 about.copyright=Copyright
-about.copyright.statement=Copyright (c) 2022 huangyuhui 2022-2023 Calicy LLC 2020-2023 Coldshine 2022-2023 Moonlight Land.
+about.copyright.statement=Copyright (c) 2022 huangyuhui 2022-2023 Calicy LLC 2020-2023 Coldshine 2019-2023 Gennokioku.
 about.author=Author
 about.author.statement=@huanghongxun on bilibili
 about.claim=EULA
@@ -90,7 +90,7 @@ account.register=Register
 account.manage=Account List
 account.methods=Login Type
 account.methods.authlib_injector=authlib-injector
-account.methods.moonlightland=Gennokioku Authentication Server
+account.methods.gennokioku=Gennokioku Authentication Server
 account.methods.microsoft=Microsoft Account
 account.methods.microsoft.birth=How to update your account birthday
 account.methods.microsoft.close_page=Microsoft account authorization is now completed.\n\
@@ -1112,15 +1112,13 @@ update=Update
 update.accept=Update
 update.changelog=Changelog
 update.channel.dev=Beta
-update.channel.dev.hint=Welcome to Moonlight Land, this launcher has been customized and optimized for Moonlight Land launch, it is not recommended that you use other launchers to launch Moonlight Land,\n\
-   The Moonlight Land client you downloaded already contains Java 18 for the Windows platform. You can start the game directly without additional installation. Other platforms need to download Java 18 and set the path to start it.\n\
-  Note: Starting with Moonlight Land Launcher 1.0.3, you must use Java 18 to launch the launcher, otherwise an error may occur that prevents you from logging into the authentication server account.
-update.channel.dev.title=Welcome to Moonlight Land
+update.channel.dev.hint=Welcome to Gennokioku, this launcher has been customized and optimized for Gennokioku launch, it is not recommended that you use other launchers to launch Gennokioku,\n\
+   The Gennokioku client you downloaded already contains Java 16 for the Windows platform. You can start the game directly without additional installation. Other platforms need to download Java 16 and set the path to start it.
+update.channel.dev.title=Welcome to Gennokioku
 update.channel.nightly=Nightly
-update.channel.nightly.hint=Welcome to Moonlight Land, this launcher has been customized and optimized for Moonlight Land launch, it is not recommended that you use other launchers to launch Moonlight Land,\n\
-   The Moonlight Land client you downloaded already contains Java 18 for the Windows platform. You can start the game directly without additional installation. Other platforms need to download Java 18 and set the path to start it.\n\
-  Note: Starting with Moonlight Land Launcher 1.0.3, you must use Java 18 to launch the launcher, otherwise an error may occur that prevents you from logging into the authentication server account.
-update.channel.nightly.title=Welcome to Moonlight Land
+update.channel.nightly.hint=Welcome to Gennokioku, this launcher has been customized and optimized for Gennokioku launch, it is not recommended that you use other launchers to launch Gennokioku,\n\
+   The Gennokioku client you downloaded already contains Java 16 for the Windows platform. You can start the game directly without additional installation. Other platforms need to download Java 16 and set the path to start it.
+update.channel.nightly.title=Welcome to Gennokioku
 update.channel.stable=Release
 update.checking=Checking for Updates
 update.failed=Unable to update
@@ -1176,5 +1174,7 @@ wizard.failed=Failed
 wizard.finish=Finish
 wizard.next=Next >
 
-moonlightland.discord=Discord
-about.thanks_to.coldshine.statement=Yukinoshita Coldshine customizes the Moonlight Land launcher
+gennokioku.discord=Discord
+gennokioku.terms=Terms
+gennokioku.changelog=Changelog
+about.thanks_to.coldshine.statement=Yukinoshita Coldshine customizes the Gennokioku launcher
