add help navigation

--- a/HMCL/src/main/resources/assets/lang/I18N.properties
+++ b/HMCL/src/main/resources/assets/lang/I18N.properties
@@ -1243,6 +1243,7 @@ wizard.finish=Finish
 wizard.next=Next >
 
 gennokioku.discord=Discord
+gennokioku.help_navigation=Wiki Help
 gennokioku.terms=Terms
 gennokioku.changelog=Changelog
 about.thanks_to.coldshine.statement=Yukinoshita Coldshine customizes the Gennokioku launcher
