--- a/HMCL/src/main/resources/assets/lang/I18N_zh_CN.properties
+++ b/HMCL/src/main/resources/assets/lang/I18N_zh_CN.properties
@@ -1114,6 +1114,7 @@ wizard.finish=完成
 wizard.next=下一步 >
 
 gennokioku.discord=Discord
+gennokioku.help_navigation=知识库帮助
 gennokioku.terms=玩家条款
 gennokioku.changelog=新版变化
 about.thanks_to.coldshine.statement=雪之下泠曦为 Gennokioku 启动器进行定制优化
